<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_gravity="center"
  android:layout_marginStart="24dp"
  android:layout_marginEnd="24dp"
  android:background="@android:color/transparent">

  <!-- CONTENT -->
  <LinearLayout
    android:id="@+id/layout_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="36dp"
    android:paddingBottom="32dp">

    <com.idevel.waterbottle.utils.font.TypefaceTextView
      android:id="@+id/text_update_popup_1"
      style="@style/PushPopupTitleText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="24sp"
      android:text="@string/popup_title_other_version" />

    <com.idevel.waterbottle.utils.font.TypefaceTextView
      android:id="@+id/text_update_popup_2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:includeFontPadding="false"
      android:text="@string/popup_msg_other_version"
      android:textColor="@color/main_text"
      android:textSize="16sp" />

    <com.idevel.waterbottle.utils.font.TypefaceTextView
      android:id="@+id/text_update_popup_3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:gravity="center"
      android:includeFontPadding="false"
      android:text="@string/popup_msg_other_version2"
      android:textColor="@color/text_grey"
      android:textSize="12sp" />
  </LinearLayout>


  <LinearLayout
    android:id="@+id/btn_layout"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_below="@id/layout_content"
    android:orientation="horizontal">

    <ImageView
      android:layout_width="1dp"
      android:layout_height="match_parent"
      android:background="#f5f5f5" />

    <com.idevel.waterbottle.utils.font.TypefaceButton
      android:id="@+id/btn_cancel"
      style="@style/PushPopupButtonLeft"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:text="@string/popup_btn_later" />

    <com.idevel.waterbottle.utils.font.TypefaceButton
      android:id="@+id/btn_ok"
      style="@style/PushPopupButtonRight"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:text="@string/popup_btn_now" />
  </LinearLayout>

  <com.idevel.waterbottle.utils.font.TypefaceButton
    android:id="@+id/btn_error"
    style="@style/PopupButton"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_below="@id/layout_content"
    android:visibility="gone" />

</RelativeLayout>